1.2.3i4:

1.2.3i3:
    Core:
    * FIX: fixed typo in core startup message "logging initial states"
    * FIX: livestatus table statehist: fixed rubbish entries whenever
           logfile instances got unloaded

    Livestatus:
    * FIX: check_mk snmp checks with a custom check interval no longer
           have an incorrect staleness value

    Notifications:
    * mkeventd: new notification plugin for forwarding notifications
       to the Event Console. See inline docu in share/check_mk/notification/mkeventd
       for documentation.
    * FIX: cleanup environment from notifications (needed for CMC)

    Checks & Agents:
    * windows_agent: increased maximum plugin output buffer size to 2MB
    * check_icmp: New WATO rule for custom PING checks
    * agent_vsphere: now able to handle < > & ' " in login credentials
    * if/if64 and friends: add 95% percentiles to graphs
    * services: inventory now also matches against display names of services
    * esx_vsphere_hostsystem.multipath: now able to set warn/crit levels
    * cpu_netapp: added Perf-O-Meter and PNP template
    * cisco_cpu: added Perf-O-Meter and PNP template
    * apc_symmetra: add input voltage to informational output
    * agent_vsphere: new debug option --tracefile
    * FIX: windows_agent: fixed bug in cleanup of open thread handles
    * FIX: cups default printer is now monitored again in linux agent
    * FIX: host notification email in html format: fixed formating error
           (typo in tag)
    * FIX: netapp_volumes: better output when volume is missing
    * FIX: winperf_phydisk: handle case where not performance counters are available
    * FIX: check_mk_agent.linux: limit Livestatus check to 3 seconds
    * FIX: esx_vsphere_vm: fixed exception when memory info for vm is missing
    * FIX: esx_vsphere_hostsystem: Fixed typo in check output

    Multisite:
    * Filtering in views by Hostalias is possible now too